Revert "fix sidebar overflow"
This reverts commit 761077763212abe5a6b1c4d79c26f375255cefb8.

--- a/src/components/gwf-vis-host-sidebar/gwf-vis-host-sidebar.css
+++ b/src/components/gwf-vis-host-sidebar/gwf-vis-host-sidebar.css
@@ -2,7 +2,6 @@
   display: block;
   margin: var(--leaflet-control-margin);
   height: calc(100vh - var(--leaflet-control-margin) * 2);
-  overflow: hidden;
 }
 
 [part="container"] {
